# stabchain

./: .gitignore  Cargo.toml  README.md  USAGE.md  to_bench.md
.github/workflows/: bench_criterion.yml  bench_pull.yml  bench_push.yml  benches.yml  benchmark.yml  codecov.yml  full_bench.yml  full_tests.yml  full_tests_ift.yml  full_tests_naive.yml  full_tests_random.yml  full_tests_shallow.yml  rust.yml
benches/: entry.rs  perm.rs  permutation.rs
benches/group/: bruteforce_elements.rs  mod.rs  orbit.rs  stabilizer_chain.rs
benches/group/orbit/: factored_transversal.rs  mod.rs  transversal.rs
benches/group/stabilizer_chain/: export_groups.rs  mod.rs  selector.rs
benches/perm/: comparison.rs  mod.rs
criterion/group__bruteforce__classic_vs_orbit_cyclic/report/: index.html
criterion/group__bruteforce__classic_vs_orbit_symm/report/: index.html
criterion/group__orbit__f_transversal_vs_optmized_f_transversal_complete/report/: index.html
criterion/group__orbit__f_transversal_vs_optmized_f_transversal_complete_m/report/: index.html
criterion/group__orbit__f_transversal_vs_optmized_f_transversal_uncomplete/report/: index.html
criterion/group__orbit__orbit_vs_factored_cyclic/report/: index.html
criterion/group__orbit__orbit_vs_factored_dihedral/report/: index.html
criterion/group__orbit__orbit_vs_factored_symmetric/report/: index.html
criterion/group__orbit__orbit_vs_optmized_orbit_complete/report/: index.html
criterion/group__orbit__orbit_vs_optmized_orbit_complete_many_gens/report/: index.html
criterion/group__orbit__orbit_vs_optmized_orbit_uncomplete/report/: index.html
criterion/group__orbit__transversal_vs_factored_cyclic/report/: index.html
criterion/group__orbit__transversal_vs_factored_dihedral/report/: index.html
criterion/group__orbit__transversal_vs_factored_symmetric/report/: index.html
criterion/group__stabchain__ss__copies_cyclic/report/: index.html
criterion/report/: index.html
data/: small.json
dev/bench/: data.js
examples/: benchmark.rs  group_import.rs  permutation_converter.rs  run_group.rs
scripts/: basics.g  experiments.g  export_primitive.g  export_ruth.g  export_small.g  export_transitive.g  gatherExperiments.g  semidirect.g
src/: group.rs  lib.rs
src/group/: brute_force.rs  factored_transversal.rs  group_library.rs  mod.rs  random_perm.rs  utils.rs
src/perm/: actions.rs  algos.rs  application.rs  based.rs  export.rs  factored_transversal.rs  factored_traversal.rs  mod.rs  orbit.rs  rand_perm.rs  utils.rs
tests/: integration_tests.rs
(+6750 files in other folders)
