[package]
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"
name = "stabchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features= ["derive", "rc"] }
num-bigint = {version = "0.3", features = ["serde"] }
itertools = "0.9"
num = "0.3"
rand = "0.7"
serde = {version = "1.0", features = ["derive", "rc"]}

[dev-dependencies]
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
criterion = "0.3"
structopt = "0.3"
walkdir = "2"
lazy_static = "1.4"

# Needed as otherwise cargo tries to run benchmarks as tests and messes cmdline args
[lib]
bench = false

[[bench]]
harness = false
name = "entry"
