[package]
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"
name = "stabchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
num = "0.3"
num-bigint = {version = "0.3", features = ["serde"]}
rand = "0.7"
serde = {version = "1.0", features = ["derive", "rc"]}
tracing = "0.1"

[dev-dependencies]
criterion = "0.3"
lazy_static = "1.4"
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
structopt = "0.3"
walkdir = "2"
rayon = "1.4"
rand_xorshift = "0.2"
zip = "0.5"
indicatif = "0.15"

# Needed as otherwise cargo tries to run benchmarks as tests and messes cmdline args
[lib]
bench = false

[[bench]]
harness = false
name = "entry"
