[package]
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>", "Ewan Gilligan <ewan.gilligan@gmail.com>"]
edition = "2018"
name = "stabchain"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
num = "0.4"
num-bigint = {version = "0.4", features = ["serde"]}
rand = "0.8.4"
serde = {version = "1.0", features = ["derive", "rc"]}
tracing = "0.1.26"

[dev-dependencies]
criterion = "0.3.5"
indicatif = "0.16.2"
lazy_static = "1.4"
rand_xorshift = "0.3"
rayon = "1.5.1"
serde_json = {version = "1.0.66", features = ["arbitrary_precision"]}
structopt = "0.3.22"
tracing-subscriber = "0.2.19"
walkdir = "2.3.2"
zip = "0.5.13"

# Needed as otherwise cargo tries to run benchmarks as tests and messes cmdline args
[lib]
bench = false

[[bench]]
harness = false
name = "entry"
